--- a/Nagat's ideas/index.html
+++ b/Nagat's ideas/index.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
-
   </head>
   <body>
     <main>
@@ -14,5 +11,7 @@
     <script src="tank.js"></script>
     <script src="projectile.js"></script>
     <script src="sketch.js"></script>
+    <script src="p5.js"></script>
+    <script src="p5.sound.min.js"></script>
   </body>
 </html>
