--- a/Nagat's ideas/index.html
+++ b/Nagat's ideas/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css">
     <meta charset="utf-8" />
   </head>
   <body>
@@ -13,5 +13,6 @@
     <script src="sketch.js"></script>
     <script src="p5.js"></script>
     <script src="p5.sound.min.js"></script>
+    <script src="style.css"></script>
   </body>
 </html>
