--- a/Nagat's ideas/index.html
+++ b/Nagat's ideas/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
     <script src="map.js"></script>
     <script src="tank.js"></script>
@@ -8,7 +9,6 @@
     <script src="sketch.js"></script>
     <script src="p5.js"></script>
     <script src="p5.sound.min.js"></script>
-    <script src="style.css"></script>
   </head>
   <body>
     <main>
