--- a/ajinkya-ideas/tank-trouble-proto.html
+++ b/ajinkya-ideas/tank-trouble-proto.html
@@ -14,6 +14,8 @@
   </style>
   <script src="p5.min.js"></script>
   <!-- <script src="../addons/p5.sound.js"></script> -->
+  <script src="planck.min.js"></script>
+  <script src="p5play.min.js"></script>
   <script src="Grid.js"></script>
   <script src="Bullet.js"></script>
   <script src="Tank.js"></script>
